<resources>
    <string name="app_name">CVT_data</string>
    <string name="page1_ImageView">app图像</string>
    <string name="page1_button1">语言设置</string>
    <string name="page1_button2">连接状态</string>
    <string name="page1_button3">数据采集</string>
    <string name="page1_button4">图表显示</string>

    <string name="page2_button5">简体中文</string>
    <string name="page2_button6">繁體中文</string>
    <string name="page2_button7">English</string>
    <string name="page2_button8">日本語</string>
    <string name="page2_Toolbar_title">语言设置</string>>

    <string name="menu_language">语言设置</string>
    <string name="menu_state">连接状态</string>
    <string name="menu_data">数据采集</string>
    <string name="menu_picture">图表显示</string>

    <string name="page3_textView1">发动机水温</string>
    <string name="page3_textView2">发动机转速</string>
    <string name="page3_textView3">平均有效压力</string>
    <string name="page3_textView4">发动机扭矩</string>
    <string name="page3_textView5">燃油消耗率</string>
    <string name="page3_textView6">主动轮转速</string>
    <string name="page3_textView7">从动轮转速</string>
    <string name="page3_textView8">发动机油温</string>
    <string name="page3_textView9">发动机油压</string>

    <string name="page4_textView1">蓝牙</string>
    <string name="page4_textView2">设备</string>
    <string name="page4_button1">开启/关闭</string>
</resources>