<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D5EA2"
    android:orientation="vertical"
    android:visibility="visible">

    <Button
        android:id="@+id/button5"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="#00B0FF"
        android:text="@string/page2_button5"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_below="@id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#00B0FF"
        android:text="@string/page2_button6"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_below="@id/button6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#00B0FF"
        android:text="@string/page2_button7"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_below="@id/button7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#00B0FF"
        android:text="@string/page2_button8"
        android:textColor="#000000"
        android:textSize="20sp" />
</RelativeLayout>