<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="209dp"
        android:layout_height="443dp"
        android:layout_gravity="center"
        android:contentDescription="@string/page1_ImageView"
        android:visibility="visible"
        tools:srcCompat="@mipmap/eagle" />

    <RelativeLayout
        android:layout_width="366dp"
        android:layout_height="220dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button1"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:background="@color/colorButton"
            android:clickable="false"
            android:text="@string/page1_button1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginStart="66dp"
            android:layout_toEndOf="@id/button1"
            android:background="@color/colorButton"
            android:text="@string/page1_button2"
            android:textColor="@color/colorText"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_below="@id/button2"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@color/colorButton"
            android:text="@string/page1_button3"
            android:textColor="@color/colorText"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_below="@id/button2"
            android:layout_gravity="center"
            android:layout_marginStart="66dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@id/button3"
            android:background="@color/colorButton"
            android:text="@string/page1_button4"
            android:textColor="@color/colorText"
            android:textSize="24sp" />
    </RelativeLayout>

</LinearLayout>