<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/page4_textView1"
        android:textSize="26sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button1"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@id/textView1"
        android:text="@string/page4_button1"
        android:background="@color/colorButton"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_below="@id/textView1"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/page4_textView2"
        android:textSize="26sp"
        android:textStyle="bold|italic" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="375dp"
        android:layout_height="450dp"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>