<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="273dp"
        android:layout_height="274dp"
        android:layout_gravity="center"
        android:contentDescription="@string/page1_ImageView"
        android:visibility="visible"
        tools:srcCompat="@mipmap/eagle" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="568dp"
        android:labelFor="@id/imageView"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/page3_textView1"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/textView1"
            android:autofillHints=""
            android:background="@null"
            android:ems="25"
            android:gravity="center_horizontal|center_vertical"
            android:inputType="text"
            android:labelFor="@id/textView1"
            android:hint="0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@id/textView1"
            android:gravity="center"
            android:text="@string/page3_textView2"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:layout_below="@id/editText1"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/textView2"
            android:autofillHints=""
            android:background="@null"
            android:ems="25"
            android:gravity="center_horizontal|center_vertical"
            android:inputType="text"
            android:labelFor="@id/textView1"
            android:hint="0" />


    </RelativeLayout>


</LinearLayout>